Fix spacing between events and footer.

--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -98,7 +98,7 @@
 
 .eventsContainer {
     width: 100%;
-    padding: 50px 0 40px 0;
+    padding: 50px 0 10px 0;
     overflow-x: scroll;
     display: flex;
     flex-wrap: wrap;
